# bitbake-hashserver-web-ui

./: Makefile  README.md  app.py  pyproject.toml
src/bitbake_hashserver_web_ui/: __init__.py  app.py
src/bitbake_hashserver_web_ui/static/: common.css  common.js
src/bitbake_hashserver_web_ui/templates/: alert.html.j2  all-users.html.j2  database.html.j2  error.html.j2  index.html.j2  nav-bar.html.j2  new-user-token.html.j2  no-user.html.j2  query.html.j2  stats.html.j2  user-perm-list.html.j2
templates/: all-users.html.j2  database.html.j2  error.html.j2  index.html.j2  no-user.html.j2
